2004-03-06  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcelanguage.c
	(gtk_source_language_get_tag_default_style): Return a copy of a default
	tag style when the style is not found in the style scheme, or when the
	tag has no style associated with it (bug #136070, Dustin Mulcahey).

2004-03-05  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/language-specs/csharp.lang: updated mime-types to work
	with the new shared-mime-info database (patch by 
	Tim Vismor <tvismor@acm.org>).

=== gtksourceview 0.9.1 ===

2004-02-23  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Bump version to 0.9.1.

	* NEWS:
	* README: Update.

2004-02-23  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/gtksourcestylescheme.[ch]: marked the
	"Others" style as deprecated

2004-02-22  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceiter.c (g_utf8_strrcasestr): Position the
	starting char pointer for the reverse search using UTF-8 aware
	functions instead of pointer arithmetic.  Ditto for the haystack
	offset counter (bug #133887, alexhack inbox ru).

2004-02-21  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/language-specs/per.lang: updated mime-types to work
	with the new shared-mime-info database (thanks to tvismor AT acm org).

2004-02-20  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* autogen.sh: 
	* configure.in: Set DEPRECATED_FLAGS variable and compiler
	warnings according to maintainer mode (i.e. full deprecated flags
	and error compiler warnings if maintainer mode is on).

	* gtksourceview/Makefile.am: 
	* tests/Makefile.am: Use DEPRECATED_FLAGS.

	* gtksourceview/language-specs/csharp.lang: Highlight "value" in
	C# (bug #134405, algol firenze linux it).
	
	* gtksourceview/gtksourceregex.h: 
	* gtksourceview/gtksourceregex.c (gtk_source_regex_search)
	(gtk_source_regex_match): Added options to disable beginning and
	end of line anchor matching at string ends.
